--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Portfolio of David Pollan</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  </head>
+</head>
 
 <body>
 
@@ -33,23 +34,22 @@
 
     <!-- Start of Main Content section -->
     <div class="container">
-        
-        <div id="content">
-            <div id="title"><h2>About Me</h2></div>
-                <div id="image">
-                    <img alt="My Self Portrait" src="assets/images/me.jpg">
-                </div>
-            <p>My name is David Pollan, and I've been a web developer for 5 years currently.  I've worked with HTML, CSS, Wodpress, and 
-                Front-end web design.  I currently work for a small internet marketing firm as a front-end developer.  I am taking this class at Upenn
-            in the hopes of reaching senior web develoer level.</p>
 
-            <p>My goal in the Upenn Coding BootCamp is to devle deeper into JavaScript, learn JavaScript-based frameworks like react, and become more familiar
-                with the comand line interface for GitBash.
+        <div id="content">
+            <div id="title">
+                <h2>About Me</h2>
+            </div>
+            <div id="image">
+                <img alt="My Self Portrait" src="assets/images/me.jpg">
+            </div>
+            <p>My name is David Pollan, and I've been a web developer for 5 years currently. I've worked with HTML, CSS, Wodpress, and Front-end web design. I currently work for a small internet marketing firm as a front-end developer. I am taking this class
+                at Upenn in the hopes of reaching senior web develoer level.</p>
+
+            <p>My goal in the Upenn Coding BootCamp is to devle deeper into JavaScript, learn JavaScript-based frameworks like react, and become more familiar with the comand line interface for GitBash.
             </p>
 
-            <p>Before I became a web developer, I used to be an automotive technician due to my love of cars and car culture.  When I'm not coding,
-                I still love to work on my classic 1973 Buick Regal.  I also like to write in my spare time and I hope to retire and be a published author
-                for the rest of my days.
+            <p>Before I became a web developer, I used to be an automotive technician due to my love of cars and car culture. When I'm not coding, I still love to work on my classic 1973 Buick Regal. I also like to write in my spare time and I hope to retire
+                and be a published author for the rest of my days.
             </p>
 
             <button class="resume"><a title="Download Resume" href="assets/files/David_Pollan_2020_resume.pdf">See My Resume</a></button>
@@ -67,13 +67,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p>&copy; 2019 David Pollan</p>
+                    <p>&copy; 2019-2020 David Pollan</p>
                 </div>
             </div>
         </div>
     </footer>
-     <!--End of Footer section -->
+    <!--End of Footer section -->
 
 </body>
-</html>
 
+</html>
