--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,20 @@
             <div class="container portfolio-contain">
                 <div class="row">
                     <div class="col-sm-12 col-md-12 webapp">
-                        <a title="5 Day Weather Forecaster" target="_blank" href="https://github.com/dp95000/burger-logger">
+                        <a title="5 Day Weather Forecaster" target="_blank" href="https://quiet-mesa-62762.herokuapp.com/">
+                            <img alt="5 Day Weather Forecaster" src="assets/images/note-taker.jpg">
+                        </a>
+                        <h3 class="webapp-title">Note Taker App</h3>
+                        <a class="github-button" target="_blank" href="https://quiet-mesa-62762.herokuapp.com/">View on Heroku</a>
+                        <a class="github-button" target="_blank" href="https://github.com/dp95000/note-taker">View on GitHub</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container portfolio-contain">
+                <div class="row">
+                    <div class="col-sm-12 col-md-12 webapp">
+                        <a title="5 Day Weather Forecaster" target="_blank" href="https://boiling-savannah-58390.herokuapp.com/">
                             <img alt="5 Day Weather Forecaster" src="assets/images/burger.jpg">
                         </a>
                         <h3 class="webapp-title">Burger Logger (Eat Da Burger!)</h3>
