--- a/portfolio.html
+++ b/portfolio.html
@@ -47,12 +47,12 @@
             <div class="container portfolio-contain">
                 <div class="row">
                     <div class="col-sm-12 col-md-12 webapp">
-                        <a title="Group Project 1 - Billboard Management System" target="_blank" href="https://dp95000.github.io/group-project-1/">
+                        <a title="Group Project 1 - Billboard Management System" target="_blank" href="https://philly-car-emporium.herokuapp.com/">
                             <img alt="Group Project 1 - Billboard Management System" src="assets/images/philly-emporium.jpg">
                         </a>
                         <h3 class="webapp-title">Project 2 - Philly Auto Emporium</h3>
                         <a class="github-button" target="_blank" href="https://github.com/dp95000/Project-2">View on GitHub</a>
-                        <a class="github-button" target="_blank" href="https://github.com/dp95000/group-project-1">View on Heroku</a>
+                        <a class="github-button" target="_blank" href="https://philly-car-emporium.herokuapp.com/">View on Heroku</a>
                     </div>
                 </div>
             </div>
